--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -29,6 +29,9 @@
       <None Update="Day7s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day7s2\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
