--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -35,6 +35,9 @@
       <None Update="Day8s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day8s2\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
