--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -38,6 +38,9 @@
       <None Update="Day8s2\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day9s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
