--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -44,6 +44,9 @@
       <None Update="Day9s2\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day10s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
