--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -56,6 +56,9 @@
       <None Update="Day11s2\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day12s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
