--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -59,6 +59,9 @@
       <None Update="Day12s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day12s2\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
