--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -62,6 +62,9 @@
       <None Update="Day12s2\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day13s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
