--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -65,6 +65,9 @@
       <None Update="Day13s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="Day14s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
