--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -65,9 +65,6 @@
       <None Update="Day13s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-<<<<<<< HEAD
-      <None Update="Day14s1\input">
-=======
       <None Update="Day12s2\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
@@ -75,9 +72,11 @@
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
       <None Update="Day13s2\input">
->>>>>>> origin/main
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+    <None Update="Day14s1\input">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
