--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -77,6 +77,9 @@
     <None Update="Day14s1\input">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day14s2\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
