--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -104,6 +104,9 @@
     <None Update="Day16s2\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day17s1\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
