--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -107,6 +107,9 @@
     <None Update="Day17s1\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day17s2\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
