--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -113,6 +113,9 @@
     <None Update="Day18s1\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day18s2\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
