--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -143,6 +143,9 @@
     <None Update="Day20s2\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day21s1\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
