--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -146,6 +146,9 @@
     <None Update="Day21s1\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day22s1\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
