--- a/AdventOfCode.csproj
+++ b/AdventOfCode.csproj
@@ -149,6 +149,9 @@
     <None Update="Day22s1\input">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Day22s2\input">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     </ItemGroup>
 
 </Project>
